k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beamtimehero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beamtimehero
  template:
    metadata:
      labels:
        app: beamtimehero
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: beamtimehero
          image: ghcr.io/deanslac/beamtimehero:0.0.1 # {"$imagepolicy": "flux-system:beamtimehero"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: beamline-data
              mountPath: /sdf/group/ssrl
              readOnly: true
          livenessProbe:
            httpGet:
              path: /beamtimehero/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /beamtimehero/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "768Mi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: beamline-data
          persistentVolumeClaim:
            claimName: sdf-group-ssrl-pvc
