k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beamtimehero
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
